--- a/argentina.html
+++ b/argentina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-  <title>Django Girls - free programming workshop for women at PyCon AU 2014 in Brisbane, Australia</title>
+  <title>Django Girls - free programming workshop for women at PyCon AU 2014 in Brisbane, Argentina</title>
   <meta name="description" content="Django Girls is a one-day workshop about programimng for women, organized during PyCon AU 2014 in Brisbane, Australia">
   <meta name="keywords" content="programming, python, django, workshop, women, females, Australia">
   <link href="static/img/au-favicon.ico" rel="shortcut icon">
